# NoFate.github.io

./: pyproject.toml  try.html
calculation/: i  index.html  style.css
calendar/: index.html  style.css
sonnet/: index.html  style.css
tabs/: index.html  style.css
terminal/: index.html  style.css
